--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,7 +10,14 @@
 </head>
 <body>
     <%- include('../includes/navbar') %>
-    <%-body%>
+     
+
+  <div class="container mx-auto px-4">
+    <%- include('../includes/flash') %>
+   
+      <%- body %>
+    
+</div>
       <%- include('../includes/footer') %>
   
 </body>
