build imageUpload functionality

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -62,7 +62,7 @@
           <div class="relative overflow-hidden">
             <img 
               class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110" 
-              src="<%= list.image %>" 
+              src="<%= list.image.url %>" 
               alt="<%= list.title %>" 
             />
             <!-- Wishlist Button -->
