--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -21,7 +21,7 @@
         <div class="relative rounded-3xl overflow-hidden shadow-2xl group mb-6">
           <img 
             id="mainImage"
-            src="<%= listing.image %>" 
+            src="<%= listing.image.url %>" 
             alt="<%= listing.title %>" 
             class="w-full h-96 lg:h-[500px] object-cover transition-transform duration-700 group-hover:scale-105"
           />
